Getting started on composing CompleteFutures
Starting with an executable class and the README